Z-index for footnotes fix

--- a/resources/assets/sass/tachyon.scss
+++ b/resources/assets/sass/tachyon.scss
@@ -199,6 +199,7 @@ span.footnoteText {
     color: #f2e6ce;
     width: 240px;
     display: none;
+    z-index:22;
 }
 
 .footnote{
